[package]
name = "rust-bitvmx-storage-backend"
version = "0.1.1"
edition = "2021"

[lib]
name = "storage_backend"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
rocksdb = { version = "0.23.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0.12"
uuid = { version = "1.10.0", features = ["v4"] }
cocoon = "0.4.2"
[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[[bench]]
name = "storage_bench"
harness = false
