[package]
name = "rust-bitvmx-storage-backend"
version = "0.1.1"
edition = "2021"
description = "Rust BitVMX Storage Backend"
license = "MIT"
readme = "README.md"
repository = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend"
categories = ["database", "storage"]
keywords = ["rust", "storage", "backend", "BitVMX", "database", "RocksDB"]

[lib]
name = "storage_backend"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
rocksdb = { version = "0.23.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "2.0.12"
uuid = { version = "1.10.0", features = ["v4"] }
cocoon = "0.4.2"
hex = "0.4.3"
rand = "0.9.1"
redact = { version = "0.1", features = ["serde"] }

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "backup_bench"
harness = false
